ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: posthog
  namespace: posthog
spec:
  rules:
  - host: posthog.plasmic.app
    http:
      paths:
      - backend:
          service:
            name: posthog-events
            port:
              number: 8000
        path: /batch
        pathType: Prefix
      - backend:
          service:
            name: posthog-events
            port:
              number: 8000
        path: /capture
        pathType: Prefix
      - backend:
          service:
            name: posthog-events
            port:
              number: 8000
        path: /decide
        pathType: Prefix
      - backend:
          service:
            name: posthog-events
            port:
              number: 8000
        path: /e
        pathType: Prefix
      - backend:
          service:
            name: posthog-events
            port:
              number: 8000
        path: /track
        pathType: Prefix
      - backend:
          service:
            name: posthog-events
            port:
              number: 8000
        path: /s
        pathType: Prefix
  tls:
  - hosts:
    - posthog.plasmic.app
    secretName: posthog-tls
